--- a/src/tomloprodModal.css
+++ b/src/tomloprodModal.css
@@ -1,3 +1,37 @@
+/*
+ Tomloprod Modal 1.0.1
+ 
+ The MIT License (MIT)
+ 
+ Copyright (c) 2015 by Tomás López.
+ 
+ Permission is hereby granted, free of charge, to any person obtaining a copy
+ of this software and associated documentation files (the "Software"), to deal
+ in the Software without restriction, including without limitation the rights
+ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ copies of the Software, and to permit persons to whom the Software is
+ furnished to do so, subject to the following conditions:
+ 
+ The above copyright notice and this permission notice shall be included in
+ all copies or substantial portions of the Software.
+ 
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ THE SOFTWARE.
+ */
+ 
+.tm-avoidSelection{
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
 .tm-modal {
     position: fixed;
     top: 50%;
@@ -81,7 +115,7 @@
         max-width: 100%;
     }
     .tm-content{
-        color: #fff;
+        color: #5c7d98;
         position: relative;
         margin: 0 auto;
         height:100%;
@@ -124,9 +158,9 @@
 .tm-wrapper{
     height: 100%;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
-    background-color:#5c7d98;
+    background-color:#FFF;
     overflow: hidden;
-    color: #FFF;
+    color: #5c7d98;
 }
 .tm-MainContainer{
     -webkit-overflow-scrolling: touch;
@@ -139,8 +173,8 @@
     -webkit-transform-origin:  center top;
     transform-origin: center top;
 }
-.tm-showModal.tm-effect ~ .tm-MainContainer{
-    -webkit-transform: scale(0.8);
+.tm-MainContainer.tm-effect{
+ -webkit-transform: scale(0.8);
     -moz-transform:  scale(0.8);
     -o-transform:  scale(0.8);
     -ms-transform:  scale(0.8);
